[gd_scene load_steps=5 format=3 uid="uid://cfqwn58f1kvle"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_g68vy"]
[ext_resource type="Script" path="res://scripts/quests/quest_reward_panel.gd" id="2_2xvbt"]
[ext_resource type="PackedScene" uid="uid://b11xiyik10j7i" path="res://prefabs/ui/reward_panel.tscn" id="2_bdbld"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="2_xp6ow"]

[node name="QuestRewardPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g68vy")
script = ExtResource("2_2xvbt")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 500)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QuestRewardPanelTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 16.0
offset_right = 150.0
offset_bottom = 66.0
grow_horizontal = 2
theme = ExtResource("2_xp6ow")
bbcode_enabled = true
text = "[center]Quest Rewards[/center]"
fit_content = true

[node name="RewardPanel" parent="Panel" instance=ExtResource("2_bdbld")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -35.0
offset_right = 440.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoRewardsLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]No Rewards...[/center]"
fit_content = true

[node name="OkButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -64.0
offset_right = 17.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "OK"

[connection signal="pressed" from="Panel/OkButton" to="." method="_on_ok_button_pressed"]
